[tool.poetry]
name = "imqfody"
version = "0.1.2"
description = "Python wrapper for IntelMQ Fody API"
authors = ["3c7 <3c7@posteo.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/3c7/python-imqfody"
repository = "https://github.com/3c7/python-imqfody"
keywords = [
    "intelmq",
    "fody"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
